tests/hm_typing/faulty_enum_extra_variant.sy
A :: enum
    Q,
    W,
    E,
    R,
end


start :: fn do
    case A.Q do
        Q do end
        W do end
        E do end
    end
end

// error: $ExtraVariants(..)
